--- a/news/templates/news/home.html
+++ b/news/templates/news/home.html
@@ -16,7 +16,7 @@
     <div class="nav-wrapper container">
       <a id="logo-container" href="home.html" class="brand-logo"><font color="grey">Neutral</font><font color="red"> News</font></a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="posts/posttemplate.html">Example - Post Template</a></li>
+        <li><a href="{% url 'post' %}">Example - Post Template</a></li>
         <li><a href="#!">Recent</a></li>
         <li><a href="#!">Popular</a></li>
         <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Apply to be a Contributor<i class="material-icons right">arrow_drop_down</i></a></li>
@@ -29,7 +29,7 @@
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
-          <li><a href="posts/posttemplate.html">Example - Post Template</a></li>
+          <li><a href="{% url 'post' %}">Example - Post Template</a></li>
           <li><a href="#!">Recent</a></li>
           <li><a href="#!">Popular</a></li>
           <li><a class="dropdown-button" href="#!" data-activates="dropdown2">Apply to be a Contributor<i class="material-icons right">arrow_drop_down</i></a></li>
@@ -53,7 +53,7 @@
           <h5 class="header col s12 light">Just Kidding. That's impossible. But this is the next best thing.</h5>
         </div>
         <div class="row center">
-          <a href="posts/posttemplate.html" id="download-button" class="btn waves-effect waves-light grey" >Get Started</a>
+          <a href="{% url 'post' %}" id="download-button" class="btn waves-effect waves-light grey" >Get Started</a>
         </div>
         <br><br>
 
