--- a/news/templates/news/posttemplate.html
+++ b/news/templates/news/posttemplate.html
@@ -6,11 +6,12 @@
   <title>Post Template</title>
 
   <!-- CSS  -->
+  {% load static %}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
-  <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="{% static 'news/materialize.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="{% static 'news/style.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
 <script>
 $(document).ready(function(){
     $("#liberalText").hide();
@@ -69,7 +70,7 @@ $(document).ready(function(){
   <div class="post-max-width">
       <div class="section">
               <h2>Donald Trump Explains Sweden Terror Comment</h2>
-              <img src="../background3.jpg" class="responsive-img">
+              <img src="{% static 'news/background3.jpg' %}" class="responsive-img">
               <div class="row">
                   <div class="col s12">
                       <ul class="tabs tabs-fixed-width">
@@ -121,5 +122,4 @@ $(document).ready(function(){
       </div>
     </div>
   </footer>  
-
 </body>
