--- a/news/templates/news/home.html
+++ b/news/templates/news/home.html
@@ -14,7 +14,7 @@
 <body>
   <nav class="white menu-bar" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="home.html" class="brand-logo"><font color="grey">Neutral</font><font color="red"> News</font></a>
+      <a id="logo-container" href="{% url 'index' %}" class="brand-logo"><font color="grey">Neutral</font><font color="red"> News</font></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="{% url 'post' %}">Example - Post Template</a></li>
         <li><a href="#!">Recent</a></li>
