Fonts work on homepage

--- a/news/templates/news/home.html
+++ b/news/templates/news/home.html
@@ -7,8 +7,8 @@
   <!-- CSS  -->
   {% load static %}
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="{% static 'news/materialize.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="{% static 'news/style.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="{% static 'news/css/materialize.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="{% static 'news/css/style.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
   <nav class="white menu-bar" role="navigation">
@@ -55,7 +55,7 @@
         <br><br>
       </div>
     </div>
-    <div class="parallax"><img src="{% static 'news/background1.jpg' %}" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="{% static 'news/images/background1.jpg' %}" alt="Unsplashed background img 1"></div>
   </div>
   <div class="container">
     <div class="section">
@@ -124,8 +124,8 @@
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="{% static 'news/materialize.js' %}"></script>
-  <script src="{% static 'news/init.js' %}"></script>
+  <script src="{% static 'news/js/materialize.js' %}"></script>
+  <script src="{% static 'news/js/init.js' %}"></script>
 
   </body>
 </html>
