--- a/news/templates/news/home.html
+++ b/news/templates/news/home.html
@@ -16,7 +16,7 @@
       <a id="logo-container" href="{% url 'index' %}" class="brand-logo"><font color="grey">Neutral</font><font color="red"> News</font></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="/post/test/">Example - Post Template</a></li>
-        <li><a href="#!">Recent</a></li>
+        <li><a href="{% url 'admin:index' %}">Admin</a></li>
         <li><a href="#!">Popular</a></li>
         <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Apply to be a Contributor<i class="material-icons right">arrow_drop_down</i></a></li>
         <ul id='dropdown1' class='dropdown-content'>
@@ -28,7 +28,7 @@
       </ul>
       <ul id="nav-mobile" class="side-nav">
           <li><a href="/post/test/">Example - Post Template</a></li>
-          <li><a href="#!">Recent</a></li>
+          <li><a href="{% url 'admin:index' %}">Admin</a></li>
           <li><a href="#!">Popular</a></li>
           <li><a class="dropdown-button" href="#!" data-activates="dropdown2">Apply to be a Contributor<i class="material-icons right">arrow_drop_down</i></a></li>
           <ul id='dropdown2' class='dropdown-content'>
