--- a/news/templates/news/home.html
+++ b/news/templates/news/home.html
@@ -73,7 +73,7 @@
                   </div>
                   <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                    <p>{{ Article.truth }}</p>
+                    <p>{{ Article.truth | safe }}</p>
                   </div>
                   <div class="card-action">
                       <a href="#">This is a link</a>
