--- a/news/templates/news/home.html
+++ b/news/templates/news/home.html
@@ -9,6 +9,14 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="{% static 'news/css/materialize.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="{% static 'news/css/style.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <script src="{% static 'news/js/masonry.pkgd.js}"></script>
+<script>
+// jQuery
+$('.grid').masonry({
+  columnWidth: 200,
+  itemSelector: '.grid-item'
+});
+</script>
 
 </head>
 <body>
@@ -61,9 +69,10 @@
 
   <div class="section container">
       <div class="row">
+          <div class="grid">
             {% for Article in article_list %}
             <div class="col s6">
-                <div class="card">
+                <div class="card grid-item">
                   <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator" src="{{ Article.image.url }}">
                   </div>
@@ -82,6 +91,7 @@
                 </div>
             </div>
             {% endfor %}
+        </div>
         </div>
     </div>
 
