--- a/news/templates/news/home.html
+++ b/news/templates/news/home.html
@@ -13,7 +13,8 @@
 <script>
 // jQuery
 $('.grid').masonry({
-  columnWidth: 200,
+  columnWidth: 160,
+  stagger: 30,
   itemSelector: '.grid-item'
 });
 </script>
