--- a/news/templates/news/home.html
+++ b/news/templates/news/home.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="{% static 'news/css/materialize.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="{% static 'news/css/style.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <script src="{% static 'news/js/masonry.pkgd.js}"></script>
+  <script src="{% static 'news/js/masonry.pkgd.js %}"></script>
 <script>
 // jQuery
 $('.grid').masonry({
