--- a/news/templates/news/home.html
+++ b/news/templates/news/home.html
@@ -72,8 +72,8 @@ $('.grid').masonry({
       <div class="row">
           <div class="grid">
             {% for Article in article_list %}
-            <div class="col s6">
-                <div class="card grid-item">
+            <div class="col s6 grid-item">
+                <div class="card ">
                   <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator" src="{{ Article.image.url }}">
                   </div>
