--- a/news/templates/news/home.html
+++ b/news/templates/news/home.html
@@ -82,10 +82,10 @@
                 </div>
             {% endfor %}
         </div>
-        </div>
     </div>
 </div>
-
+</div>
+</body>
   <footer class="page-footer grey">
     <div class="container">
       <div class="row">
