🎊 Added Temporary Favicon

--- a/news/templates/news/home.html
+++ b/news/templates/news/home.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="{% static 'news/css/materialize.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link href="{% static 'news/css/style.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link rel="shortcut icon" type="image/png" href="{% static 'news/images/favicon.ico' %}"/>
     <!--  Scripts-->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="{% static 'news/js/materialize.js' %}"></script>
