--- a/news/templates/news/home.html
+++ b/news/templates/news/home.html
@@ -67,16 +67,16 @@
         <div class="row">
             {% for Article in article_list %}
             <div class="col">
-                <div class="card ">
+                <div class="card sticky-action">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="{{ Article.image.url }}">
                     </div>
-                    <div class="card-content">
+                    <div class="card-content card-action">
                         <span class="card-title activator grey-text text-darken-4">{{ Article.title_text }}<i class="material-icons right">playlist_add</i></span>
                         <p><a href="post/{{ Article.slug }}">Go To Article</a></p>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+                        <span class="card-title grey-text text-darken-4">Truth Preview<i class="material-icons right">close</i></span>
                         <p>{{ Article.truth | safe }}</p>
                     </div>
                 </div>
