--- a/news/static/news/css/style.css
+++ b/news/static/news/css/style.css
@@ -18,6 +18,16 @@ p{
     margin-top: 0;
     margin-bottom: 20px;
 }
+a {
+    color:black;
+    text-decoration: none;
+}
+
+a:hover{
+    color:black;
+    text-decoration: none;
+}
+
 .head{
     text-align: center;
     position: relative;
