--- a/news/templates/news/home.html
+++ b/news/templates/news/home.html
@@ -33,36 +33,13 @@
         <div class="collumns">
             {% for Article in article_list %}
             <div class="collumn">
-                <div class="head"><span class="headline hl3">{{ Article.title_text }}</span><p><span class="headline hl4">by JOHANN WOLFGANG VON GOETHE</span></p></div>
+                <div class="head"><span class="headline hl3"><a href="post/{{ Article.slug }}">{{ Article.title_text }}</a></span><p><span class="headline hl4">by JOHANN WOLFGANG VON GOETHE</span></p></div>
+                <img src="{{ Article.image.url }}"  style='width:100%;' border="0" alt="Null">
                 {{ Article.truth | safe }}
             </div>
             {% endfor %}
         </div>
     </div>
-    
-    <div class="section container">
-        <div class="row">
-            {% for Article in article_list %}
-            <div class="col">
-                <div class="card sticky-action">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="{{ Article.image.url }}">
-                    </div>
-                    <div class="card-content card-action">
-                        <span class="card-title activator grey-text text-darken-4">{{ Article.title_text }}<i class="material-icons right">playlist_add</i></span>
-                        <p><a href="post/{{ Article.slug }}">Go To Article</a></p>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Truth Preview<i class="material-icons right">close</i></span>
-                        <p>{{ Article.truth | safe }}</p>
-                    </div>
-                </div>
-            </div>
-            {% endfor %}
-        </div>
-    </div>
-    
-    
     
 </body>
 
