--- a/news/templates/news/posttemplate.html
+++ b/news/templates/news/posttemplate.html
@@ -39,37 +39,39 @@ $(document).ready(function(){
 });
 </script>
 
-    <div class="head">
-        <div class="headerobjectswrapper">
-            <div class="weatherforcastbox"><span style="font-style: italic;">Weatherforcast for the next 24 hours: Plenty of Sunshine</span><br><span>Wind: 7km/h SSE; Ther: 21°C; Hum: 82%</span></div>
-            <header><a href="{% url 'index' %}">Neutral News</a></header>
-        </div>
-
-        <div class="subhead">A nearly unbiased newspaper</div>
+<div class="head">
+    <div class="headerobjectswrapper">
+        <div class="weatherforcastbox"><span style="font-style: italic;">Weatherforcast for the next 24 hours: Plenty of Sunshine</span><br><span>Wind: 7km/h SSE; Ther: 21°C; Hum: 82%</span></div>
+        <header><a href="{% url 'index' %}">Neutral News</a></header>
     </div>
     
-    <div class="container-fluid">
-        <h2>{{ article.title_text }}</h2>
-        <img src="{{ article.image.url }}" style='width:100%;' border="0" alt="Null">
-        <div class="chip">
-            {{ article.conservative_author }}
+    <div class="subhead">A nearly unbiased newspaper</div>
+</div>
+
+<div class="container-fluid">
+    <h2>{{ article.title_text }}</h2>
+    <img src="{{ article.image.url }}" style='width:100%;' border="0" alt="Null">
+    <div class="chip">
+        {{ article.conservative_author }}
+    </div>
+    <div class="chip">
+        {{ article.liberal_author }}
+    </div>
+    <div class="row">
+        <div class="col s12">
+            <ul class="nav nav-pills">
+                <li class="tab col s4"><a href="#justfacts" class="active grey-text">Just the Facts</a></li>
+                <li class="tab col s4"><a href="#conservative"class="red-text">Conservative Commentary</a></li>
+                <li class="tab col s4"><a href="#liberal" class="indigo-text">Liberal Commentary</a></li>
+            </ul>
         </div>
-        <div class="chip">
-            {{ article.liberal_author }}
-        </div>
-        <div class="row">
-            <div class="col s12">
-                <ul class="tabs tabs-fixed-width">
-                    <li class="tab col s4"><a href="#justfacts" class="active grey-text">Just the Facts</a></li>
-                    <li class="tab col s4"><a href="#conservative"class="red-text">Conservative Commentary</a></li>
-                    <li class="tab col s4"><a href="#liberal" class="indigo-text">Liberal Commentary</a></li>
-                </ul>
-            </div>
-        </div>
+    </div>
+    <div class="well">
         <a id="truthText" class="col s12 black-text">{{ article.truth | safe }}</a>
         <a id="conservativeText" class="col s12 materialize-red-text">{{ article.conservative_opinion | safe }}</a>
         <a id="liberalText" class="col s12 indigo-text"> {{ article.liberal_opinion | safe }} </a>
     </div>
+</div>
 </div>
 
 <!--  Scripts-->
