--- a/news/static/news/css/style.css
+++ b/news/static/news/css/style.css
@@ -2,7 +2,7 @@ body{
     font-family: 'Droid Serif', serif;
     font-size: 14px;
     color: #2f2f2f;
-    background-color: #f9f7f1;
+    background-color: White;
 }
 header{
     font-family: 'Playfair Display', serif;
@@ -77,9 +77,11 @@ a:hover{
     vertical-align: top;
     margin-bottom: 50px;
     transition: all .7s;
+
 }
+
 .collumn + .collumn { 
-  border-left: 1px solid #2f2f2f;
+  border-left: 1px solid #e2e2e2;
 }
 .collumn .headline{
     text-align: center;
