--- a/news/templates/news/home.html
+++ b/news/templates/news/home.html
@@ -15,25 +15,25 @@
     <script src="{% static 'news/js/materialize.js' %}"></script>
     <script src="{% static 'news/js/init.js' %}"></script>
     <link href='http://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic,700italic,900italic|Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <title>Newspaper Style Design Experiment</title>
+    <title>Neutral News</title>
     <meta name="viewport" content="width=device-width">
 </head>
 <body>
-    
+
     <div class="head">
         <div class="headerobjectswrapper">
             <div class="weatherforcastbox"><span style="font-style: italic;">Weatherforcast for the next 24 hours: Plenty of Sunshine</span><br><span>Wind: 7km/h SSE; Ther: 21°C; Hum: 82%</span></div>
             <header><a href="{% url 'index' %}">Neutral News</a></header>
         </div>
-        
+
         <div class="subhead">A nearly unbiased newspaper</div>
     </div>
-    
+
     <div class="content">
         <div class="collumns">
             {% for Article in article_list %}
             <div class="collumn">
-                <div class="head"><span class="headline hl3"><a href="post/{{ Article.slug }}">{{ Article.title_text }}</a></span><p><span class="headline hl4">by JOHANN WOLFGANG VON GOETHE</span></p></div>
+                <div class="head"><span class="headline hl3"><a href="post/{{ Article.slug }}">{{ Article.title_text }}</a></span><p><span class="headline hl4">by {{Article.conservative_author}} and {{Article.liberal_author}}</span></p></div>
                 <img src="{{ Article.image.url }}"  style='width:100%;' border="0" alt="Null">
                 {{ Article.truth | safe }}
 
