--- a/news/templates/news/posttemplate.html
+++ b/news/templates/news/posttemplate.html
@@ -14,8 +14,8 @@
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="{% static 'news/js/materialize.js' %}"></script>
     <script src="{% static 'news/js/init.js' %}"></script>
-    <link href='http://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic,700italic,900italic|Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <title>Newspaper Style Design Experiment</title>
+    <link href='http://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic,700italic,900italic|Droid+Serif:400,700,400italic,700italic|Cinzel+Decorative' rel='stylesheet' type='text/css'>
+    <title>Neutral News</title>
     <meta name="viewport" content="width=device-width">
 </head>
 
@@ -39,9 +39,9 @@ $(document).ready(function(){
 });
 </script>
 
+<br>
 <div class="head">
     <div class="headerobjectswrapper">
-        <div class="weatherforcastbox"><span style="font-style: italic;">Weatherforcast for the next 24 hours: Plenty of Sunshine</span><br><span>Wind: 7km/h SSE; Ther: 21°C; Hum: 82%</span></div>
         <header><a href="{% url 'index' %}">Neutral News</a></header>
     </div>
 
