--- a/news/templates/news/posttemplate.html
+++ b/news/templates/news/posttemplate.html
@@ -14,7 +14,7 @@
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="{% static 'news/js/materialize.js' %}"></script>
     <script src="{% static 'news/js/init.js' %}"></script>
-    <link href='http://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic,700italic,900italic|Droid+Serif:400,700,400italic,700italic|Cinzel+Decorative' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic,700italic,900italic|Droid+Serif:400,700,400italic,700italic|Cinzel+Decorative' rel='stylesheet' type='text/css'>
     <title>Neutral News</title>
     <meta name="viewport" content="width=device-width">
 </head>
@@ -38,8 +38,6 @@ $(document).ready(function(){
     $('.button-collapse').sideNav();
 });
 </script>
-
-<br>
 <div class="head">
     <div class="headerobjectswrapper">
         <header><a href="{% url 'index' %}">Neutral News</a></header>
