--- a/news/static/news/css/style.css
+++ b/news/static/news/css/style.css
@@ -10,7 +10,7 @@ header{
     font-size: 80px;
     /*text-transform: uppercase;*/
     display: inline-block;
-    line-height: 72px;
+    line-height:  72px;
     margin-bottom: 20px;
     margin-top: 20px;
 
@@ -64,6 +64,10 @@ a:hover{
     margin: 30px 2% 0 2%;
 
 
+}
+
+.container-fluid{
+  width: 75%
 }
 .collumns{
 
@@ -129,7 +133,6 @@ a:hover{
 
 .collumn .headline.hl3{
     font-weight: 400;
-    font-style: italic;
     font-size: 36px;
     box-sizing: border-box;
     padding: 10px 0 10px 0;
@@ -274,7 +277,7 @@ a:hover{
     }
 
 }
-@media only all and (max-width: 600px) {
+@media only all and (max-width: 650px) {
     .collumn{
         width: 100%;
     }
@@ -285,7 +288,6 @@ a:hover{
     header{
         max-width: 320px;
         font-size: 60px;
-        line-height: 54px;
         overflow: hidden;
     }
 
