--- a/news/templates/news/home.html
+++ b/news/templates/news/home.html
@@ -1,45 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-    <title>Neutral News</title>
-    <!-- CSS  -->
-    {% load static from staticfiles %}
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="{% static 'news/css/bootstrap.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <link href="{% static 'news/css/style.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <link rel="shortcut icon" type="image/png" href="{% static 'news/images/favicon.ico' %}"/>
-    <!--  Scripts-->
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="{% static 'news/js/materialize.js' %}"></script>
-    <script src="{% static 'news/js/init.js' %}"></script>
-    <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic,700italic,900italic|Droid+Serif:400,700,400italic,700italic|Cinzel+Decorative' rel='stylesheet' type='text/css'>
-    <title>Neutral News</title>
-    <meta name="viewport" content="width=device-width">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+  <title>Neutral News</title>
+  <!-- CSS  -->
+  {% load static from staticfiles %}
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="{% static 'news/css/bootstrap.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="{% static 'news/css/style.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link rel="shortcut icon" type="image/png" href="{% static 'news/images/favicon.ico' %}"/>
+  <!--  Scripts-->
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="{% static 'news/js/materialize.js' %}"></script>
+  <script src="{% static 'news/js/init.js' %}"></script>
+  <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic,700italic,900italic|Droid+Serif:400,700,400italic,700italic|Cinzel+Decorative' rel='stylesheet' type='text/css'>
+  <title>Neutral News</title>
+  <meta name="viewport" content="width=device-width">
 </head>
 <body>
 
-    <div class="head">
-        <div class="headerobjectswrapper">
-            <header><a href="{% url 'index' %}">Neutral News</a></header>
-        </div>
+  <div class="head">
+    <div class="headerobjectswrapper">
+      <header>
+        <a href="{% url 'index' %}">
 
-        <div class="subhead">A nearly unbiased newspaper</div>
+
+          <font color="#002868">N</font>
+          <font color="#132562">e</font>
+          <font color="#26225D">u</font>
+          <font color="#391F57">t</font>
+          <font color="#4C1C52">r</font>
+          <font color="#60194C">a</font>
+          <font color="#731646">l</font>
+          <font color="#861341">N</font>
+          <font color="#99103B">e</font>
+          <font color="#AC0D36">w</font>
+          <font color="#BF0A30">S</font>
+        </a>
+      </header>
     </div>
 
-    <div class="content">
-        <div class="collumns">
-            {% for Article in article_list %}
-            <div class="collumn">
-                <div class="head"><span class="headline hl3"><a href="post/{{ Article.slug }}">{{ Article.title_text }}</a></span><p><span class="headline hl4">by {{Article.conservative_author}} and {{Article.liberal_author}}</span></p></div>
-                <img src="{{ Article.image.url }}"  style='width:100%;' border="0" alt="Null">
-                <br><br>
-                {{ Article.truth | safe }}
-            </div>
-            {% endfor %}
-        </div>
+    <div class="subhead">A nearly unbiased newspaper</div>
+  </div>
+
+  <div class="content">
+    <div class="collumns">
+      {% for Article in article_list %}
+      <div class="collumn">
+        <div class="head"><span class="headline hl3"><a href="post/{{ Article.slug }}">{{ Article.title_text }}</a></span><p><span class="headline hl4">by {{Article.conservative_author}} and {{Article.liberal_author}}</span></p></div>
+        <a href="post/{{ Article.slug }}"><img src="{{ Article.image.url }}"  style='width:100%;' border="0" alt="Null"></a>
+        <br><br>
+        {{ Article.preview | safe }}
+      </div>
+      {% endfor %}
     </div>
+  </div>
 </div>
 
 </body>
