--- a/news/templates/news/posttemplate.html
+++ b/news/templates/news/posttemplate.html
@@ -40,7 +40,7 @@ $(document).ready(function(){
 </script>
 <div class="head">
     <div class="headerobjectswrapper">
-        <header><a href="{% url 'index' %}">N e u t r a l N e w S</a></header>
+        <header><a href="{% url 'index' %}">Neutral News</a></header>
     </div>
 
     <div class="subhead">A nearly unbiased newspaper</div>
@@ -78,6 +78,29 @@ $(document).ready(function(){
         <a id="conservativeText" class="col s12 materialize-red-text">{{ article.conservative_opinion | safe }}</a>
         <a id="liberalText" class="col s12 indigo-text"> {{ article.liberal_opinion | safe }} </a>
     </div>
+
+    <div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+
+var disqus_config = function () {
+//this.page.url = '{{ article.slug }}';  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = '{{ article.slug }}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://neutral-news.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+
 </div>
 </div>
 
