📊 Added Menu Bar

--- a/news/templates/news/home.html
+++ b/news/templates/news/home.html
@@ -24,15 +24,18 @@
     <div class="headerobjectswrapper">
       <header>
         <a href="{% url 'index' %}">
-
-
           <font color="#002868">N</font><font color="#132562">e</font><font color="#26225D">u</font><font color="#391F57">t</font><font color="#4C1C52">r</font><font color="#60194C">a</font><font color="#731646">l</font>
           <font color="#861341">N</font><font color="#99103B">e</font><font color="#AC0D36">w</font><font color="#BF0A30">S</font>
         </a>
       </header>
     </div>
-
     <div class="subhead">A nearly unbiased newspaper</div>
+  </div>
+
+  <div class="head topbar">
+    <h4>
+      About  |  Popular  |  Categories  | Search
+    </h4>
   </div>
 
   <div class="content">
