--- a/news/templates/news/posttemplate.html
+++ b/news/templates/news/posttemplate.html
@@ -40,7 +40,7 @@ $(document).ready(function(){
 </script>
 <div class="head">
     <div class="headerobjectswrapper">
-        <header><a href="{% url 'index' %}">Neutral News</a></header>
+        <header><a href="{% url 'index' %}">Neutral NewS</a></header>
     </div>
 
     <div class="subhead">A nearly unbiased newspaper</div>
